--- a/AGAPE LOGIN/style.css
+++ b/AGAPE LOGIN/style.css
@@ -18,8 +18,8 @@ section {
 
 section .imgBox{
     position: relative;
-    width: 50%;
-    height: 100%
+    width: 60%;
+    height: 100%;       
 }
 
 section .imgBox img{
@@ -46,10 +46,8 @@ section .contentBox .formBox{
 section .contentBox .formBox h2{
     color: black;
     font-weight: 600;
-    font-size: 1.5em;
-    /*text-transform: uppercase;*/
+    font-size: 2em;
     margin-bottom: 20px;
-    /*border-bottom: 4px solid #21A66A;*/
     display: inline-block;
     letter-spacing: 1px;
 
@@ -71,10 +69,10 @@ section .contentBox .formBox span{
 
 section .contentBox .formBox input{
     width: 100%;
-    padding: 10px 10px;
+    padding: 9px 40px 10px 12px;
     outline: none;
     font-weight: 400;
-    border: 1px solid black;
+    border: 1px solid rgb(149, 149, 149);
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
@@ -82,7 +80,10 @@ section .contentBox .formBox input{
 }
 
 section .contentBox .formBox input:hover{
-    border: 2px solid #21A66A;
+    border: 1px solid #21A66A;
+    overflow: hidden;
+
+
 }
 
 #btnLogIn{
@@ -94,14 +95,9 @@ section .contentBox .formBox input:hover{
 }
 
 #btnLogIn:hover{
-    color: white;
-    background-color: #21a66acd;
-    font-weight: 500;
-    font-size: 20px;
-    border: none;
-    cursor:pointer;
+    background-color: #21a66adc;
+    overflow: hidden;
 }
-
 #signUp{
     width: 100%;
     font-weight: 400;
@@ -110,10 +106,41 @@ section .contentBox .formBox input:hover{
     text-align: center;
 }
 
+#signUp p a{ 
+    color: #21A66A;
+}
 
-/* 
-section .contentBox .formBx .remember
-{
- margin-bottom:10px;
-  color:#607d8b;
- } */
+@media(max-width:768px){
+    section .imgBox{
+        resize: vertical;
+        margin-top: 2%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 125%;
+        overflow: hidden;
+        
+    }
+
+    section .contentBox{
+        display:flex;
+        margin: 15%;
+        justify-content:center;
+        align-items:center;
+        width:100%;
+        height:100%;
+        z-index:1;
+    }
+
+    section .contentBox .formBox{
+        width:100%;
+        padding:40px;
+        background:rgba(255, 255, 255, 0.9);
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;        
+        margin:50px;
+        /* background-color: #ffff; */
+
+    }
+
+}
