:lipstick: Edit Style

--- a/AGAPE LOGIN/style.css
+++ b/AGAPE LOGIN/style.css
@@ -18,9 +18,9 @@ section {
 
 section .imgBox{
     position: relative;
-    width: 60%;
+    width: 100%;
     height: 100%;
-    margin-left: 10%;    /**/   
+    margin-left: 5%;      
 }
 
 section .imgBox img{
@@ -65,7 +65,7 @@ section .contentBox .formBox span{
     margin-bottom: 5px;
     display: inline-block;
     color: black;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 15px;
     letter-spacing: 1px;
 }
