--- a/LogIns/LogIn2/style.css
+++ b/LogIns/LogIn2/style.css
@@ -93,8 +93,8 @@ section .contentBox {
         background: white;
         /* background:rgba(255, 255, 255, 0.9); */
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-        margin: 5%;        
-      /*   margin:20px; */
+/*         margin: 5%;        
+ */      /*   margin:20px; */
         /* background-color: #ffff; */
 
     }
