--- a/LogIns/LogIn2/style.css
+++ b/LogIns/LogIn2/style.css
@@ -25,54 +25,142 @@ section .contentBox {
     background-color: tan /* cambair color*/;
 }
 
-/* -----------------------------*/
+
+section .contentBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+section .contentBox .formBox{
+  width: 35%;
+  border-radius: 5px;
+  padding: 40px;
+  margin: 10%;
+
+}
+
+section .contentBox .formBox h2{
+  color: black;
+  font-weight: 600;
+  font-size: 2em;
+  margin-bottom: 20px;
+  display: inline-block;
+  letter-spacing: 1px;
+
+}
+
+section .contentBox .formBox .inputBx{
+  margin-bottom: 20px;
+}
+
+section .contentBox .formBox span{
+  font-size: 16px;
+  margin-bottom: 5px;
+  display: inline-block;
+  color: black;
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 1px;
+}
+
+section .contentBox .formBox .botones{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
+}
+
+#btn1{
+  width: 40%;
+  padding: 10px 12px 10px 12px;
+  outline: none;
+  font-weight: 400;
+  letter-spacing: 1px;
+  background: transparent;
+  border-radius: 5px;
+}
+#btn1:hover{
+
+}
+
+#btn2{
+  width: 40%;
+  padding: 10px 12px 10px 12px;
+  outline: none;
+  font-weight: 400;
+  letter-spacing: 1px;
+  background: transparent;
+  border-radius: 5px;
+}
+
+/* ------------------- */
+
 /* Style The Dropdown Button */
 .dropbtn {
-    background-color: transparent;
-    border: 1px solid rgb(149, 149, 149);
-    color: darkgrey;
-    padding: 16px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: white;
+  background-color: transparent;
+  border: 1px solid rgb(149, 149, 149);
+  color: darkgrey;
+  padding: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 5px;
+  margin-inline-end: 8px;
+
 }
-        
+   
+    
+
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-    position: relative;
-    display: inline-block;
+  position: relative;
+  display: inline-block;
 }
-        
+      
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+display: none;
+position: absolute;
+background-color: #f9f9f9;
+box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+z-index: 1;
+width: 95%;
+
 }
-        
-        /* Links inside the dropdown */
-        .dropdown-content a {
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-        }
-        
-        /* Change color of dropdown links on hover */
-        .dropdown-content a:hover {background-color: #f1f1f1}
-        
-        /* Show the dropdown menu on hover */
-        .dropdown:hover .dropdown-content {
-          display: block;
-        }
-        
-        /* Change the background color of the dropdown button when the dropdown content is shown */
-        .dropdown:hover .dropbtn {
-          background-color: transparent;
-        }
+
+i.fa-solid.fa-angle-down{
+      /* margin: 2%; */
+      padding-inline-end: 2px;
+      padding-inline-start: 30px;
+}
+      
+      /* Links inside the dropdown */
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+      
+      /* Change color of dropdown links on hover */
+      .dropdown-content a:hover {background-color: #f1f1f1}
+      
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+      
+      /* Change the background color of the dropdown button when the dropdown content is shown */
+      .dropdown:hover .dropbtn {
+        background-color: transparent;
+      }
+
+      .grid{
+        display: -moz-grid-line;
+      }
 /* ------------------- */
 
 @media(max-width:768px){
