--- a/LogIns/LogIn1/style.css
+++ b/LogIns/LogIn1/style.css
@@ -34,7 +34,7 @@ section .imgBox img{
 section .contentBox{
     display: flex;
     justify-content: center;
-    align-items: center;
+    agn-items: center;
     width: 100%;
     height: 100%;
 }
@@ -55,7 +55,7 @@ section .contentBox .formBox h2{
     font-weight: 600;
     font-size: 2em;
     margin-bottom: 20px;
-    display: inline-block;
+    display: inne-block;
     letter-spacing: 1px;
 
 }
@@ -67,7 +67,7 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox span{
     font-size: 16px;
     margin-bottom: 5px;
-    display: inline-block;
+    display: inne-block;
     color: black;
     font-weight: 500;
     font-size: 15px;
@@ -77,9 +77,9 @@ section .contentBox .formBox span{
 section .contentBox .formBox input{
     width: 100%;
     padding: 9px 40px 10px 12px;
-    outline: none;
+    outne: none;
     font-weight: 400;
-    border: 1px solid rgb(149, 149, 149);
+    border: 1px sod rgb(149, 149, 149);
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
@@ -87,7 +87,7 @@ section .contentBox .formBox input{
 }
 
 section .contentBox .formBox input:hover{
-    border: 1px solid #21A66A;
+    border: 1px sod #21A66A;
     overflow: hidden;
 
 
@@ -107,7 +107,7 @@ a#btnLogIn {
     letter-spacing: 1px;
     border-radius: 5px;
     overflow: hidden;
-    text-align: center;
+    text-agn: center;
     text-decoration: none;
  }
 
@@ -130,8 +130,8 @@ a#btnLogIn {
     width: 100%;
     font-weight: 400;
     letter-spacing: 1px;
-    align-items: center;
-    text-align: center;
+    agn-items: center;
+    text-agn: center;
 }
 
 #signUp p a{ 
@@ -154,7 +154,7 @@ a#btnLogIn {
         display:flex;
 /*       margin: 15%;
  */     justify-content:center;
-        align-items:center;
+        agn-items:center;
         width:100%;
         height:100%;
         z-index:1;
