--- a/LogIns/LogIn2/style.css
+++ b/LogIns/LogIn2/style.css
@@ -19,7 +19,7 @@ section {
 section .contentBox {
     display: flex;
     justify-content: center;
-    align-items: center;
+    agn-items: center;
     width: 100%;
     height: 100%;
     background-color: tan /* cambair color*/;
@@ -29,7 +29,7 @@ section .contentBox {
 section .contentBox{
   display: flex;
   justify-content: center;
-  align-items: center;
+  agn-items: center;
   width: 100%;
   height: 100%;
 }
@@ -47,7 +47,7 @@ section .contentBox .formBox h2{
   font-weight: 600;
   font-size: 2em;
   margin-bottom: 20px;
-  display: inline-block;
+  display: inne-block;
   letter-spacing: 1px;
 
 }
@@ -59,7 +59,7 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox span{
   font-size: 16px;
   margin-bottom: 5px;
-  display: inline-block;
+  display: inne-block;
   color: black;
   font-weight: 500;
   font-size: 15px;
@@ -68,15 +68,15 @@ section .contentBox .formBox span{
 
 section .contentBox .formBox .botones{
   justify-content: center;
-  align-items: center;
-  text-align: center;
+  agn-items: center;
+  text-agn: center;
   
 }
 
 #btn1{
   width: 40%;
   padding: 10px 12px 10px 12px;
-  outline: none;
+  outne: none;
   font-weight: 400;
   letter-spacing: 1px;
   background: transparent;
@@ -89,7 +89,7 @@ section .contentBox .formBox .botones{
 #btn2{
   width: 40%;
   padding: 10px 12px 10px 12px;
-  outline: none;
+  outne: none;
   font-weight: 400;
   letter-spacing: 1px;
   background: transparent;
@@ -101,14 +101,14 @@ section .contentBox .formBox .botones{
 /* Style The Dropdown Button */
 .dropbtn {
   background-color: transparent;
-  border: 1px solid rgb(149, 149, 149);
+  border: 1px sod rgb(149, 149, 149);
   color: darkgrey;
   padding: 8px;
   font-size: 16px;
   cursor: pointer;
   background-color: white;
   border-radius: 5px;
-  margin-inline-end: 8px;
+  margin-inne-end: 8px;
 
 }
    
@@ -117,7 +117,7 @@ section .contentBox .formBox .botones{
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
-  display: inline-block;
+  display: inne-block;
 }
       
 /* Dropdown Content (Hidden by Default) */
@@ -131,13 +131,13 @@ width: 95%;
 
 }
 
-i.fa-solid.fa-angle-down{
+i.fa-sod.fa-angle-down{
       /* margin: 2%; */
-      padding-inline-end: 2px;
-      padding-inline-start: 30px;
+      padding-inne-end: 2px;
+      padding-inne-start: 30px;
 }
       
-      /* Links inside the dropdown */
+      /* nks inside the dropdown */
       .dropdown-content a {
         color: black;
         padding: 12px 16px;
@@ -145,7 +145,7 @@ i.fa-solid.fa-angle-down{
         display: block;
       }
       
-      /* Change color of dropdown links on hover */
+      /* Change color of dropdown nks on hover */
       .dropdown-content a:hover {background-color: #f1f1f1}
       
       /* Show the dropdown menu on hover */
@@ -159,7 +159,7 @@ i.fa-solid.fa-angle-down{
       }
 
       .grid{
-        display: -moz-grid-line;
+        display: -moz-grid-ne;
       }
 /* ------------------- */
 
@@ -169,7 +169,7 @@ i.fa-solid.fa-angle-down{
         display:flex;
 /*         margin: 15%;
  */     justify-content:center;
-        align-items:center;
+        agn-items:center;
         width:100%;
         height:100%;
         z-index:1;
