--- a/LogIns/LogIn2/styleReporte.css
+++ b/LogIns/LogIn2/styleReporte.css
@@ -10,6 +10,41 @@
     
 }
 
+.container{
+    display: grid;
+    align-content: space-evenly;
+
+}
+
+.container .row .col{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.container .row .col #mes{
+    margin-right: 15px;
+}
+
+
+
+
+select {
+    font-family: 'FontAwesome', 'Roboto', sans-serif;
+    width: 100%;
+    padding: 10px 20px 10px 12px;
+    outline: none;
+    font-weight: 400;
+    border: 1px sod rgb(149, 149, 149);
+    letter-spacing: 1px;
+    background: transparent;
+    border-radius: 5px;
+}
+
+#year{
+    margin-left: 15px;
+    width: 92%;
+}
+
 section {
     position: relative;
     width: 100%;
@@ -31,9 +66,10 @@ section .contentBox{
 }
 
 section .contentBox .formBox{
-    max-width: 455px;
-    min-height: 338px;
-    padding: 40px;
+    min-width: 440px;
+    max-width: 600px;
+    min-height: 400px;
+    padding:40px;
     background: white;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     margin: 5%;   
@@ -43,13 +79,14 @@ section .contentBox .formBox h2{
     font-size: var(--mobile-font-size);
     color: #5047E6;
     font-weight: 600;
-    font-size: 1.5em;
+    font-size: 1.8em;
     margin-top: 20px;
     margin-bottom: 20px;
     display: inne-block;
     letter-spacing: 1px;
+    justify-content:center;
     text-align: center;
-
+    width: 100%;
 }
 
 /* section .contentBox .formBox h3{
@@ -78,16 +115,16 @@ section .contentBox .formBox label{
     letter-spacing: 1px;
 }
 
-section .contentBox .formBox input{
+section .contentBox .formBox input {
     width: 100%;
-    padding: 9px 40px 10px 12px;
+    padding: 10px;
     outline: none;
     font-weight: 400;
     border: 1px sod rgb(149, 149, 149);
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
-
+    border: 2px solid #5047E6;
 }
 
 section .contentBox .formBox input:hover{
@@ -104,28 +141,58 @@ input:focus::placeholder {
     height: 80px;
  }
 
-#btnLogIn {
+ #btnLogIn {
     color: white;
     background-color: #5047E6;
     font-weight: 500;
     font-size: 20px;
     font-size: var(--mobile-font-size);
-    padding: 9px 20px 10px 12px;
-    width: 100%;
-    border: none;
+    padding: 10px;
     font-weight: 600;
     letter-spacing: 1px;
     border-radius: 5px;
     overflow: hidden;
     text-align: center;
- }
-
+    justify-items: center;
+    justify-content: center;
+    margin-left: 3%;
+    border: 2px solid #5047E6;
+}
 
 #btnLogIn:hover{
     background-color: #4f47e6cb;
     color: #f5f5f5;
     overflow: hidden;
+    border-color: transparent;
+
 }
+
+#btnLimpiar {
+    color: black;
+    background-color: #ffffff;
+    font-weight: 500;
+    font-size: 20px;
+    font-size: var(--mobile-font-size);
+    padding: 10px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    border-radius: 5px;
+    overflow: hidden;
+    text-align: center;
+    justify-items: center;
+    justify-content: center;
+    border: 1px sod #120e0e;
+    border: 1px sod #120e0e;
+    border: 2px solid #120e0e;
+}
+
+#btnLimpiar:hover{
+    background-color: #4f47e6cb;
+    border-color: transparent;
+    color: #f5f5f5;
+    overflow: hidden;
+}
+
 
 @media(max-width:768px){
 
