--- a/LogIns/LogIn1/style1.css
+++ b/LogIns/LogIn1/style1.css
@@ -52,17 +52,6 @@ section .contentBox .formBox h2{
 
 }
 
-/* section .contentBox .formBox h3{
-    font-size: var(--mobile-font-size);
-    color: black;
-    font-weight: 600;
-    font-size: 1em;
-    margin-bottom: 20px;
-    display: inne-block;
-    letter-spacing: 1px;
-
-} */
-
 section .contentBox .formBox .inputBx{
     margin-bottom: 20px;
 }
@@ -70,7 +59,7 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     display: inne-block;
     color: black;
     font-weight: 500;
@@ -83,7 +72,7 @@ section .contentBox .formBox input{
     padding: 9px 40px 10px 12px;
     outline: none;
     font-weight: 400;
-    border: 1px sod rgb(149, 149, 149);
+    border: 1px solid #b2b1b1;
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
@@ -91,7 +80,7 @@ section .contentBox .formBox input{
 }
 
 section .contentBox .formBox input:hover{
-    border: 1px sod #5047E6;
+    border: 1px solid #5047E6;
     overflow: hidden;
 }
 
@@ -99,10 +88,10 @@ input:focus::placeholder {
     color: transparent;
   }
 
- .logo{
+.logo{
     max-width: 256px;
     height: 80px;
- }
+}
 
 #btnLogIn {
     color: white;
