--- a/LogIns/LogIn2/styleReporte.css
+++ b/LogIns/LogIn2/styleReporte.css
@@ -25,16 +25,13 @@
     margin-right: 15px;
 }
 
-
-
-
 select {
-    font-family: 'FontAwesome', 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     width: 100%;
     padding: 10px 20px 10px 12px;
     outline: none;
     font-weight: 400;
-    border: 1px sod rgb(149, 149, 149);
+    border: 1px solid rgb(149, 149, 149);
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
@@ -59,10 +56,12 @@ section .contentBox{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5;  
-    background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+    background: #f5f5f5; 
+    background: #e0e0e0;
+    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
+    /* background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
     background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-
+ */
 }
 
 section .contentBox .formBox{
@@ -81,7 +80,7 @@ section .contentBox .formBox h2{
     font-weight: 600;
     font-size: 1.8em;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     display: inne-block;
     letter-spacing: 1px;
     justify-content:center;
@@ -89,16 +88,6 @@ section .contentBox .formBox h2{
     width: 100%;
 }
 
-/* section .contentBox .formBox h3{
-    font-size: var(--mobile-font-size);
-    color: black;
-    font-weight: 600;
-    font-size: 1em;
-    margin-bottom: 20px;
-    display: inne-block;
-    letter-spacing: 1px;
-
-} */
 
 section .contentBox .formBox .inputBx{
     margin-bottom: 20px;
@@ -204,7 +193,10 @@ input:focus::placeholder {
         height: 100%;
         z-index:1;
         overflow: hidden;
-        background-color: #ffffff;      
+        background-image: linear-gradient(to top, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0);
+       /*  background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+        background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+      */
     }
 
     section .contentBox .formBox{
