--- a/LogIns/LogIn1/style1.css
+++ b/LogIns/LogIn1/style1.css
@@ -93,7 +93,7 @@ input:focus::placeholder {
     height: 80px;
 }
 
-#btnLogIn {
+#submit {
     color: white;
     background-color: #5047E6;
     font-weight: 500;
@@ -110,10 +110,17 @@ input:focus::placeholder {
  }
 
 
-#btnLogIn:hover{
+#submit:hover{
     background-color: #4f47e6cb;
     color: #f5f5f5;
     overflow: hidden;
+}
+/* Toggle  */
+
+form i {
+    margin-left: -30px;
+    cursor: pointer;
+    
 }
 
 @media(max-width:768px){
