--- a/LogIns/LogIn2/styleReporte.css
+++ b/LogIns/LogIn2/styleReporte.css
@@ -193,8 +193,9 @@ input:focus::placeholder {
         height: 100%;
         z-index:1;
         overflow: hidden;
-        background-image: linear-gradient(to top, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0);
-       /*  background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+        background: white;
+/*         background-image: linear-gradient(to top, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0);
+ */       /*  background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
         background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
       */
     }
@@ -203,7 +204,9 @@ input:focus::placeholder {
         width: 100%;
         padding:40px;
         background: white;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+/*         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ */        box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
+
         margin: 5%;        
     }
 
