:pencil2: Fix typos

--- a/LogIns/LogIn2/styleReporte.css
+++ b/LogIns/LogIn2/styleReporte.css
@@ -183,8 +183,7 @@ input:focus::placeholder {
 }
 
 
-@media(max-width:768px){
-
+@media screen and (max-width: 700px){
     section .contentBox{
         display:flex;
         justify-content:center;
@@ -205,8 +204,7 @@ input:focus::placeholder {
         padding:40px;
         background: white;
 /*         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
- */        box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
-
+ */     box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
         margin: 5%;        
     }
 
