--- a/LogIns/DroplistDepartamentos/styleReporte.css
+++ b/LogIns/DroplistDepartamentos/styleReporte.css
@@ -144,6 +144,7 @@ input:focus::placeholder {
     text-align: center;
     justify-items: center;
     justify-content: center;
+    margin-left: 3%;
     border: 2px solid #5047E6;
 }
 
@@ -169,9 +170,9 @@ input:focus::placeholder {
     text-align: center;
     justify-items: center;
     justify-content: center;
+    border: 1px sod #120e0e;
+    border: 1px sod #120e0e;
     border: 2px solid #120e0e;
-    width: 95%;
-
 }
 
 #btnLimpiar:hover{
