--- a/LogIns/DroplistDepartamentos/styleDropDown.css
+++ b/LogIns/DroplistDepartamentos/styleDropDown.css
@@ -50,6 +50,7 @@ section {
     
 }
 
+
 section .contentBox{
     display: flex;
     justify-content: center;
@@ -96,7 +97,7 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
-    margin-bottom: 5px;
+    margin: 5px 0;
     display: inne-block;
     color: black;
     font-weight: 500;
@@ -104,16 +105,34 @@ section .contentBox .formBox label{
     letter-spacing: 1px;
 }
 
-section .contentBox .formBox input {
+section .contentBox .formBox span{
+    font-size: 16px;
+    font-size: var(--mobile-font-size);
+    margin: 5px 0;
+    display: inne-block;
+    color: black;
+    font-weight: 500;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+
+
+section .contentBox .formBox input{
     width: 100%;
-    padding: 10px;
+    padding: 9px 40px 10px 12px;
     outline: none;
     font-weight: 400;
-    border: 1px sod rgb(149, 149, 149);
+    border: 1px solid #b2b1b1;
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
-    border: 2px solid #5047E6;
+    
+
+}
+
+section .contentBox .formBox input:hover{
+    border: 1px solid #5047E6;
+    overflow: hidden;
 }
 
 section .contentBox .formBox input:hover{
@@ -171,6 +190,9 @@ input:focus::placeholder {
     justify-content: center;
     border: 2px solid #120e0e;
     width: 95%;
+   /*  transition-delay: 0s;
+    transition-duration: 0s;
+    -webkit-transition-duration: calc(0.01s); */
 
 }
 
