--- a/LogIns/DroplistDepartamentos/styleDropDown.css
+++ b/LogIns/DroplistDepartamentos/styleDropDown.css
@@ -154,7 +154,7 @@ input:focus::placeholder {
     height: 80px;
  }
 
- #btnLogIn {
+ #btnEnviar {
     color: white;
     background-color: #5047E6;
     font-weight: 500;
@@ -173,7 +173,7 @@ input:focus::placeholder {
 
 }
 
-#btnLogIn:hover{
+#btnEnviar:hover{
     background-color: #4f47e6cb;
     color: #f5f5f5;
     overflow: hidden;
