--- a/DroplistDepartamentos/styleDropDown.css
+++ b/DroplistDepartamentos/styleDropDown.css
@@ -35,6 +35,7 @@ select {
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
+    overflow-y: scroll;
 }
 
 select:hover{
