--- a/LogIns/LogIn1/style1.css
+++ b/LogIns/LogIn1/style1.css
@@ -1,7 +1,7 @@
 
-/* importando font */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,300&display=swap');
-
+/* // importando font 
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,300&display=swap');
+ */
 * {
     margin: 0;
     padding: 0;
@@ -119,7 +119,7 @@ input:focus::placeholder {
 }
 /* Toggle  */
 
-form i {
+div form i {
     margin-left: -30px;
     cursor: pointer;
     
