--- a/Version OFFLINE/css/logInStyle.css
+++ b/Version OFFLINE/css/logInStyle.css
@@ -144,10 +144,8 @@ div form i {
         width: 100%;
         padding:40px;
         background: white;
-        /* Se puede cambiar el shadow box*/
         box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
-/*         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
- */     margin: 5%;        
+        margin: 5%;        
     }
 
 }
