--- a/Version OFFLINE/css/styleInventario.css
+++ b/Version OFFLINE/css/styleInventario.css
@@ -7,20 +7,24 @@
     
 }
 
-/*  .container{
+.container{
     display: grid;
-   
+    align-content: space-evenly;
+
 }
+
 .container .row .col{
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0px;
+    padding-right: 0px;
 }
-  
- */
+
+.container .row .col #mes{
+    margin-right: 15px;
+}
 
 select {
     font-family: 'Roboto', sans-serif;
-    width: 100%;
+    width: -webkit-fill-available;
     padding: 10px 20px 10px 12px;
     outline: none;
     font-weight: 400;
@@ -28,13 +32,18 @@ select {
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
-    overflow-y: scroll;
 }
 
 select:hover{
     border: 1px solid #5047E6;
     overflow: hidden;
 }
+
+#year{
+    margin-left: 10px;
+    width: -webkit-fill-available; 
+}
+
 
 section {
     position: relative;
@@ -43,7 +52,6 @@ section {
     display: flex;
     
 }
-
 
 section .contentBox{
     display: flex;
@@ -61,7 +69,7 @@ section .contentBox{
 
 section .contentBox .formBox{
     min-width: 440px;
-    max-width: 600px;
+    max-width: 338px;
     min-height: 400px;
     padding:40px;
     background: white;
@@ -91,7 +99,7 @@ section .contentBox .formBox .inputBx{
 section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
-    margin: 5px 0;
+    margin-bottom: 5px;
     display: inne-block;
     color: black;
     font-weight: 500;
@@ -99,35 +107,23 @@ section .contentBox .formBox label{
     letter-spacing: 1px;
 }
 
-section .contentBox .formBox span{
-    font-size: 16px;
-    font-size: var(--mobile-font-size);
-    margin: 5px 0;
-    display: inne-block;
-    color: black;
-    font-weight: 500;
-    font-size: 15px;
-    letter-spacing: 1px;
-}
-
-
-section .contentBox .formBox input{
+section .contentBox .formBox input {
     width: 100%;
-    padding: 9px 40px 10px 12px;
+    padding: 10px;
     outline: none;
     font-weight: 400;
-    border: 1px solid #b2b1b1;
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
-
+    border: 1px solid rgb(149, 149, 149);
 }
+
+
 
 section .contentBox .formBox input:hover{
     border: 1px solid #5047E6;
     overflow: hidden;
 }
-
 
 input:focus::placeholder {
     color: transparent;
@@ -153,10 +149,10 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #5047E6;
-    width: 100%;
-    /* width: -webkit-fill-available; */
-}
+    width: -webkit-fill-available;
 
+    
+}
 
 #btnEnviar:hover{
     background-color: #4f47e6cb;
@@ -181,9 +177,8 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #120e0e;
-    width: 100%;
-   width: -webkit-fill-available;
-   /* margin-right: 10px;*/
+    margin-right: 10px;
+    width: -webkit-fill-available;
 
 }
 
@@ -205,14 +200,18 @@ input:focus::placeholder {
         z-index:1;
         overflow: hidden;
         background: white;
-
+/*         background-image: linear-gradient(to top, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0);
+ */       /*  background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+        background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+      */
     }
 
     section .contentBox .formBox{
         width: 100%;
         padding:40px;
         background: white;
-        box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
+/*         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ */     box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
         margin: 5%;        
     }
 
