--- a/Version OFFLINE/css/styleInventario.css
+++ b/Version OFFLINE/css/styleInventario.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -67,30 +66,31 @@ section .contentBox{
  */
 }
 
-section .contentBox .formBox{
-    min-width: 440px;
+
+section .contentBox .formBox {
+    min-width: 800px;
     max-width: 338px;
     min-height: 400px;
-    padding:40px;
+    max-height: 700px;
+    padding: 40px;
     background: white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin: 5%;   
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+    margin: 0;
 }
 
-section .contentBox .formBox h2{
+section .contentBox .formBox h2 {
     font-size: var(--mobile-font-size);
     color: #5047E6;
     font-weight: 600;
-    font-size: 1.8em;
-    margin-top: 20px;
-    margin-bottom: 0px;
-    display: inne-block;
+    font-size: 25px;
+    /* margin-top: 20px; */
+    margin-bottom: 10px;
+    display: inline-block;
     letter-spacing: 1px;
-    justify-content:center;
+    justify-content: center;
     text-align: center;
     width: 100%;
 }
-
 
 section .contentBox .formBox .inputBx{
     margin-bottom: 20px;
@@ -100,7 +100,7 @@ section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
     margin-bottom: 5px;
-    display: inne-block;
+    display: inline-block;
     color: black;
     font-weight: 500;
     font-size: 15px;
@@ -109,7 +109,7 @@ section .contentBox .formBox label{
 
 section .contentBox .formBox input {
     width: 100%;
-    padding: 10px;
+    padding: 6px;
     outline: none;
     font-weight: 400;
     letter-spacing: 1px;
@@ -117,7 +117,6 @@ section .contentBox .formBox input {
     border-radius: 5px;
     border: 1px solid rgb(149, 149, 149);
 }
-
 
 
 section .contentBox .formBox input:hover{
@@ -129,10 +128,12 @@ input:focus::placeholder {
     color: transparent;
   }
 
- .logo{
-    max-width: 256px;
-    height: 80px;
- }
+#logo{
+    min-width: 80px;
+    /* max-width: 256px; */
+    height: 50px;
+}
+ 
 
  #btnEnviar {
     color: white;
