--- a/Version OFFLINE/css/styleInventario.css
+++ b/Version OFFLINE/css/styleInventario.css
@@ -6,31 +6,17 @@
     
 }
 
-.container{
-    display: grid;
-    align-content: space-evenly;
-
-}
-
-.container .row .col{
-    padding-left: 0px;
-    padding-right: 0px;
-}
-
-.container .row .col #mes{
-    margin-right: 15px;
-}
-
 select {
     font-family: 'Roboto', sans-serif;
     width: -webkit-fill-available;
     padding: 10px 20px 10px 12px;
     outline: none;
     font-weight: 400;
-    border: 1px solid rgb(149, 149, 149);
     letter-spacing: 1px;
-    background: transparent;
+    background: white;
     border-radius: 5px;
+    border: 1px solid rgb(128, 128, 128);
+
 }
 
 select:hover{
@@ -38,10 +24,6 @@ select:hover{
     overflow: hidden;
 }
 
-#year{
-    margin-left: 10px;
-    width: -webkit-fill-available; 
-}
 
 
 section {
@@ -49,6 +31,9 @@ section {
     width: 100%;
     height: 100vh;
     display: flex;
+    background-color: #21A66A;
+    background: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
+
     
 }
 
@@ -58,24 +43,18 @@ section .contentBox{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5; 
-    background: #e0e0e0;
-    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
-    /* background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-    background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
- */
 }
 
 
 section .contentBox .formBox {
-    min-width: 800px;
-    max-width: 338px;
+    min-width: 750px;
     min-height: 400px;
-    max-height: 700px;
     padding: 40px;
     background: white;
-    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
-    margin: 0;
+    box-shadow: none;
+  /*   box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px; */
+    border-radius: 5px;
+    margin: 0px;  
 }
 
 section .contentBox .formBox h2 {
@@ -83,12 +62,12 @@ section .contentBox .formBox h2 {
     color: #5047E6;
     font-weight: 600;
     font-size: 25px;
-    /* margin-top: 20px; */
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     display: inline-block;
     letter-spacing: 1px;
     justify-content: center;
-    text-align: center;
+    text-align: center; 
+
     width: 100%;
 }
 
@@ -97,7 +76,7 @@ section .contentBox .formBox .inputBx{
 }
 
 section .contentBox .formBox label{
-    font-size: 16px;
+    font-size: 11px;
     font-size: var(--mobile-font-size);
     margin-bottom: 5px;
     display: inline-block;
@@ -109,13 +88,14 @@ section .contentBox .formBox label{
 
 section .contentBox .formBox input {
     width: 100%;
-    padding: 6px;
+    padding: 8px;
     outline: none;
     font-weight: 400;
     letter-spacing: 1px;
-    background: transparent;
+    background: white;
     border-radius: 5px;
-    border: 1px solid rgb(149, 149, 149);
+    color: rgb(26, 26, 26);
+    border: 1px solid rgb(128, 128, 128);
 }
 
 
@@ -126,11 +106,10 @@ section .contentBox .formBox input:hover{
 
 input:focus::placeholder {
     color: transparent;
-  }
+}
 
 #logo{
-    min-width: 80px;
-    /* max-width: 256px; */
+    min-width: 100px;
     height: 50px;
 }
  
@@ -139,10 +118,9 @@ input:focus::placeholder {
     color: white;
     background-color: #5047E6;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 25px;
     font-size: var(--mobile-font-size);
     padding: 10px;
-    font-weight: 600;
     letter-spacing: 1px;
     border-radius: 5px;
     overflow: hidden;
@@ -150,8 +128,8 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #5047E6;
+    width: 100%;
     width: -webkit-fill-available;
-
     
 }
 
@@ -178,7 +156,6 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #120e0e;
-    margin-right: 10px;
     width: -webkit-fill-available;
 
 }
@@ -191,7 +168,12 @@ input:focus::placeholder {
 }
 
 
-@media screen and (max-width: 700px){
+@media(max-width: 800px){
+
+    #logo{
+        display: none;
+    } 
+
     section .contentBox{
         display:flex;
         justify-content:center;
@@ -201,18 +183,13 @@ input:focus::placeholder {
         z-index:1;
         overflow: hidden;
         background: white;
-/*         background-image: linear-gradient(to top, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0);
- */       /*  background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-        background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-      */
     }
 
     section .contentBox .formBox{
         width: 100%;
-        padding:40px;
+        padding: 40px;
         background: white;
-/*         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
- */     box-shadow: rgba(255, 255, 255, 0) 0px 3px 8px;
+        box-shadow: none;
         margin: 5%;        
     }
 
