--- a/Version OFFLINE/css/logInStyle.css
+++ b/Version OFFLINE/css/logInStyle.css
@@ -21,10 +21,8 @@ section .contentBox{
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5;  
-    background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-    background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-
+    background: #e0e0e0;
+    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
 }
 
 section .contentBox .formBox{
@@ -68,6 +66,8 @@ section .contentBox .formBox label{
 }
 
 section .contentBox .formBox input{
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     padding: 9px 40px 10px 12px;
     outline: none;
@@ -77,6 +77,8 @@ section .contentBox .formBox input{
     background: transparent;
     border-radius: 5px;
     margin-top: 0px;
+    position: relative;
+
 /*     margin-top: 0px;
  */
 
@@ -96,6 +98,7 @@ input:focus::placeholder {
     height: 80px;
 }
 
+
 #submit {
     color: white;
     background-color: #5047E6;
@@ -103,6 +106,8 @@ input:focus::placeholder {
     font-size: 20px;
     font-size: var(--mobile-font-size);
     padding: 9px 20px 10px 12px;
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     border: none;
     font-weight: 600;
