--- a/Version OFFLINE/css/styleInventario.css
+++ b/Version OFFLINE/css/styleInventario.css
@@ -8,6 +8,8 @@
 
 select {
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     padding: 10px 20px 10px 12px;
     outline: none;
@@ -141,6 +143,7 @@ input:focus::placeholder {
     justify-content: center;
     border: 2px solid #5047E6;
     width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     
 }
@@ -168,6 +171,8 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #120e0e;
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
 
 }
