--- a/Version OFFLINE/css/styleReporte.css
+++ b/Version OFFLINE/css/styleReporte.css
@@ -22,8 +22,10 @@
     margin-right: 15px;
 }
 
-select {
+select{
     font-family: 'Roboto', sans-serif;
+    width: 100%;
+    width: -moz-available;
     width: -webkit-fill-available;
     padding: 10px 20px 10px 12px;
     outline: none;
@@ -39,11 +41,16 @@ select:hover{
     overflow: hidden;
 }
 
-#year{
-    margin-left: 10px;
-    width: -webkit-fill-available; 
+#fechaIpt{
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid rgb(149, 149, 149);
+    border-radius: 5px;
 }
 
+#fechaIpt:hover{
+    border: 1px solid #5047E6;
+    overflow: hidden;
+}
 
 section {
     position: relative;
