--- a/Version OFFLINE/css/styleDropDown.css
+++ b/Version OFFLINE/css/styleDropDown.css
@@ -10,6 +10,8 @@
 select {
     font-family: 'Roboto', sans-serif;
     width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
     padding: 10px 20px 10px 12px;
     outline: none;
     font-weight: 400;
@@ -17,7 +19,12 @@ select {
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
-    overflow-y: scroll;
+}
+
+select #municipio {
+    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
 }
 
 select:hover{
@@ -33,30 +40,32 @@ section {
     
 }
 
-
 section .contentBox{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5; 
-    background: #e0e0e0;
-    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
-    /* background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-    background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+    background: #4f47e6bd;  
+    background-image: near-gradient(to right top, #cecece, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
+
+    /* background: rgb(167,167,167);
+    background: linear-gradient(313deg, rgba(167,167,167,1) 0%, rgba(208,208,208,1) 28%);
  */
 }
 
 section .contentBox .formBox{
     min-width: 440px;
-    max-width: 600px;
-    min-height: 400px;
+    min-height: 500px;
     padding:40px;
     background: white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;
+    /*box-shadow: none;*/
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; 
     margin: 5%;   
 }
+
+
 
 section .contentBox .formBox h2{
     font-size: var(--mobile-font-size);
@@ -65,7 +74,7 @@ section .contentBox .formBox h2{
     font-size: 1.8em;
     margin-top: 20px;
     margin-bottom: 0px;
-    display: inne-block;
+    display: inline-block;
     letter-spacing: 1px;
     justify-content:center;
     text-align: center;
@@ -81,7 +90,7 @@ section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
     margin: 5px 0;
-    display: inne-block;
+    display: inline-block;
     color: black;
     font-weight: 500;
     font-size: 15px;
@@ -92,7 +101,7 @@ section .contentBox .formBox span{
     font-size: 16px;
     font-size: var(--mobile-font-size);
     margin: 5px 0;
-    display: inne-block;
+    display: inline-block;
     color: black;
     font-weight: 500;
     font-size: 15px;
@@ -127,6 +136,18 @@ input:focus::placeholder {
     height: 80px;
  }
 
+section .contentBox .formBox #alert{
+    display: none; 
+    margin-bottom: 20px;
+    height: 30px;
+    line-height:30px;
+    padding:0px 15px;
+    width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
+
+}
+
  #btnEnviar {
     color: white;
     background-color: #5047E6;
@@ -143,6 +164,8 @@ input:focus::placeholder {
     justify-content: center;
     border: 2px solid #5047E6;
     width: 100%;
+    width: -webkit-fill-available;
+    width: -moz-available;
     /* width: -webkit-fill-available; */
 }
 
@@ -171,7 +194,8 @@ input:focus::placeholder {
     justify-content: center;
     border: 2px solid #120e0e;
     width: 100%;
-   width: -webkit-fill-available;
+    width: -webkit-fill-available;
+    width: -moz-available;
    /* margin-right: 10px;*/
 
 }
