--- a/Version OFFLINE/css/styleReporte.css
+++ b/Version OFFLINE/css/styleReporte.css
@@ -9,22 +9,14 @@
 
 .container{
     display: grid;
-    align-content: space-evenly;
-
 }
 
-.container .row .col{
-    padding-left: 0px;
-    padding-right: 0px;
-}
 
-.container .row .col #mes{
-    margin-right: 15px;
-}
-
-select {
+select{
     font-family: 'Roboto', sans-serif;
-    width: -webkit-fill-available;
+    width: 100%;
+/*     width: -moz-available;
+    width: -webkit-fill-available; */
     padding: 10px 20px 10px 12px;
     outline: none;
     font-weight: 400;
@@ -32,6 +24,7 @@ select {
     letter-spacing: 1px;
     background: transparent;
     border-radius: 5px;
+    overflow: hidden;
 }
 
 select:hover{
@@ -39,11 +32,16 @@ select:hover{
     overflow: hidden;
 }
 
-#year{
-    margin-left: 10px;
-    width: -webkit-fill-available; 
+#fechaIpt{
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid rgb(149, 149, 149);
+    border-radius: 5px;
 }
 
+#fechaIpt:hover{
+    border: 1px solid #5047E6;
+    overflow: hidden;
+}
 
 section {
     position: relative;
@@ -53,38 +51,42 @@ section {
     
 }
 
+section .contentBox .formBox #alert{
+    display: none; 
+    margin-bottom: 8px;
+    height: 30px;
+    line-height:30px;
+    padding:0px 15px;
+}
+
 section .contentBox{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
-    background: #f5f5f5; 
-    background: #e0e0e0;
-    background-image: linear-gradient(to bottom, #f6f6f6, #f0f0f0, #ebebeb, #e5e5e5, #e0e0e0); 
-    /* background-image: near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
-    background-image: -webkit-near-gradient(to right top, #f2f2f2, #ebebeb, #e4e4e4, #dddddd, #d6d6d6);
- */
+    background: #4f47e6bd;
+    
 }
 
-section .contentBox .formBox{
+section .contentBox .formBox {
     min-width: 440px;
-    max-width: 600px;
-    min-height: 400px;
-    padding:40px;
+    height: 540px;
+    padding: 30px;
     background: white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin: 5%;   
+    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+    margin: 5%;
+    border-radius: 5px;
 }
 
 section .contentBox .formBox h2{
     font-size: var(--mobile-font-size);
     color: #5047E6;
     font-weight: 600;
-    font-size: 1.8em;
+    font-size: 1.2em;
     margin-top: 20px;
     margin-bottom: 0px;
-    display: inne-block;
+    display: inline-flexbox;
     letter-spacing: 1px;
     justify-content:center;
     text-align: center;
@@ -100,7 +102,7 @@ section .contentBox .formBox label{
     font-size: 16px;
     font-size: var(--mobile-font-size);
     margin-bottom: 5px;
-    display: inne-block;
+    display: inline-flexbox;
     color: black;
     font-weight: 500;
     font-size: 15px;
@@ -133,13 +135,14 @@ input:focus::placeholder {
     height: 80px;
  }
 
+
+
  #btnEnviar {
     color: white;
     background-color: #5047E6;
-    font-weight: 500;
     font-size: 20px;
     font-size: var(--mobile-font-size);
-    padding: 10px;
+    padding: 5px;
     font-weight: 600;
     letter-spacing: 1px;
     border-radius: 5px;
@@ -148,7 +151,7 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #5047E6;
-    width: -webkit-fill-available;
+    width: 100%;
 
     
 }
@@ -167,7 +170,7 @@ input:focus::placeholder {
     font-weight: 500;
     font-size: 20px;
     font-size: var(--mobile-font-size);
-    padding: 10px;
+    padding: 5px;
     font-weight: 600;
     letter-spacing: 1px;
     border-radius: 5px;
@@ -176,8 +179,7 @@ input:focus::placeholder {
     justify-items: center;
     justify-content: center;
     border: 2px solid #120e0e;
-    margin-right: 10px;
-    width: -webkit-fill-available;
+    width: 100%;
 
 }
 
